--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
-    "name": "webpack-demo",
-    "version": "1.0.0",
-    "devDependencies": {
-        "babel-core": "^6.22.1",
-        "babel-loader": "^6.2.10",
-        "babel-preset-es2015": "^6.22.0",
-        "jshint": "^2.9.4",
-        "jshint-loader": "^0.8.3",
-        "node-libs-browser": "^2.0.0",
-        "webpack": "^2.2.1",
-        "webpack-dev-server": "^2.3.0"
-    }
+  "name": "webpack-demo",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "webpack-dev-server"
+  },
+  "devDependencies": {
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
+    "jshint": "^2.9.4",
+    "jshint-loader": "^0.8.3",
+    "node-libs-browser": "^2.0.0",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0"
+  }
 }
