--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "webpack-demo",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server -d",
     "compile": "webpack",
     "prod": "webpack --config webpack-production.config.js -p"
   },
