--- a/css-demo/package.json
+++ b/css-demo/package.json
@@ -7,8 +7,10 @@
   },
   "devDependencies": {
     "css-loader": "^0.26.1",
-    "style-loader": "^0.13.1",
     "node-libs-browser": "^2.0.0",
+    "sass-loader": "^5.0.1",
+    "node-sass": "^4.5.0",
+    "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   }
