--- a/css-demo/package.json
+++ b/css-demo/package.json
@@ -7,9 +7,11 @@
   },
   "devDependencies": {
     "css-loader": "^0.26.1",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "node-libs-browser": "^2.0.0",
-    "sass-loader": "^5.0.1",
     "node-sass": "^4.5.0",
+    "sass-loader": "^5.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
