--- a/css-demo/package.json
+++ b/css-demo/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "css-loader": "^0.26.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "node-libs-browser": "^2.0.0",
