--- a/css-demo/package.json
+++ b/css-demo/package.json
@@ -6,6 +6,7 @@
     "compile": "webpack"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "less": "^2.7.2",
