--- a/css-demo/package.json
+++ b/css-demo/package.json
@@ -9,12 +9,14 @@
     "autoprefixer-loader": "^3.2.0",
     "css-loader": "^0.26.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
     "less": "^2.7.2",
     "less-loader": "^2.2.3",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   }
