--- a/tools/package.json
+++ b/tools/package.json
@@ -14,7 +14,10 @@
     "node-libs-browser": "^2.0.0",
     "css-loader": "^0.26.1",
     "style-loader": "^0.13.1",
+    "json-loader": "^0.5.4",
+    "strip-json-comments": "^2.0.1",
     "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.3.0",
     "webpack-dev-middleware": "^1.10.0"
   }
 }
