--- a/tools/package.json
+++ b/tools/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "ejs" : "^2.5.5",
     "express": "^4.14.1",
-    "morgan": "^1.8.1"
+    "morgan": "^1.8.1",
+    "jquery": "^3.1.1"
   },
   "devDependencies": {
     "node-libs-browser": "^2.0.0",
@@ -18,6 +19,7 @@
     "strip-json-comments": "^2.0.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0",
-    "webpack-dev-middleware": "^1.10.0"
+    "webpack-dev-middleware": "^1.10.0",
+    "timestamp-webpack-plugin": "^0.2.3"
   }
 }
