--- a/webpack-angular1/package.json
+++ b/webpack-angular1/package.json
@@ -10,6 +10,7 @@
     "angular": "^1.6.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
+    "raw-loader": "^0.5.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
   }
